# math_bank

./: .gitignore  Makefile  _quarto.yml  index.qmd  main.py  pyproject.toml  requirements.txt  setup.py
config/: assistant_id.txt  postgresql.yaml
docs/: index.html
modules/assistant/: assistant_client.py
modules/mathbank.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/parsing/: filename_parser.py
modules/secrets/: env_utils.py
notebooks/: generated_problem_sheet.qmd
scripts/: init_env.sh
scripts/python/: convert_with_assistant.py  parse_filename.py  test_single_conversion.py
scripts/r/: generate_problem_sheet.R
tests/: test_assistant_client.py  test_env_utils.py  test_filename_parser.py  test_logger.py
